# AiEvals

./: .env.example  .gitignore  README.md  Skill.md  main.py  pyproject.toml
.github/: CODEOWNERS
app/: main.py
app/api/: dashboard.py  datasets.py  runs.py  safety.py  settings_routes.py
app/core/: auth.py  config.py  logging.py  presentation.py
app/db/: engine.py
app/models/: entities.py
app/services/: datasets.py  execution.py
app/services/evaluation/: deterministic.py  judge.py  rag_metrics.py  reference.py  safety.py  scoring.py
app/services/llm/: anthropic_provider.py  base.py  mock_provider.py  ollama_provider.py  openai_provider.py  registry.py
app/services/observability/: tracer.py
app/templates/: base.html  dashboard.html  renderer.py  settings.html
app/templates/datasets/: case_detail.html  detail.html  import_result.html  list.html  new.html
app/templates/runs/: compare.html  detail.html  list.html  new.html
app/templates/safety/: dashboard.html
data/: aievals.db
docs/: architecture.md  data-model.md  evaluation-methodology.md  security-notes.md
scripts/: seed.py
tests/: conftest.py  test_datasets.py  test_deterministic.py  test_logging.py  test_mock_provider.py  test_routes.py  test_safety.py  test_scoring.py
